[package]
name = "arceos-loader"
version = "0.1.0"
edition = "2021"
authors = ["Tunglies <tunglies@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axstd = { path = "../../ulib/axstd", optional = true }
lazy_static = { version = "1.4", features = ["spin_no_std"] }